Opened 14 years ago

Closed 13 years ago

#7983 closed bug (fixed)

[Mail] Find button is not enabled on the first run

Reported by: diver Owned by: siarzhuk
Priority: normal Milestone: R1
Component: Applications/Mail Version: R1/Development
Keywords: gci2011 Cc:
Blocked By: Blocking:
Platform: All

Description

This is hrev42754, gcc2hynrid.

Attachments (1)

mail.png (22.0 KB ) - added by diver 14 years ago.

Download all attachments as: .zip

Change History (4)

by diver, 14 years ago

Attachment: mail.png added

comment:1 by siarzhuk, 13 years ago

Owner: changed from czeidler to siarzhuk
Status: newassigned

Change assignment because it is going to be published as GCI 2011 task.

comment:2 by ctbeiser, 13 years ago

Keywords: gci2011 added

Replicated successfully in hrev 43475.

comment:3 by siarzhuk, 13 years ago

Resolution: fixed
Status: assignedclosed

Fixed during GCI 2011 in hrev43522.

Note: See TracTickets for help on using tickets.