Fixed enable/disable "Find" button

* Fixed during GCI 2011
* Fixed #7983.

Signed-off-by: Siarzhuk Zharski <zharik@gmx.li>